# mud

./: .gitignore  AI_GUIDELINES.md  Cargo.toml  GEMINI.md  README.md  ai_disassembly.txt  autopsy_results.txt  build.rs  downloaded_model.safetensors  dumper_output.txt  generate_notebook.py  microscope_output.txt  mud.sh  test_handoff.sh  vocab_es_en.txt
assets/shaders/: simple_mul.comp  ternary_gemv.comp  ternary_gemv_igpu.comp  ternary_gemv_zero_copy.comp
docs/: AI_ARCHITECTURE.md  AI_ORCHESTRATION.md  AI_ROADMAP.md  AI_USER_MANUAL.md  ARCHITECTURAL_OVERVIEW.md  ARCHITECTURE.md  MUD_ARCHITECTURE.md  MUD_AUDIT.md  MUD_AUDIT_LATEST.md  MUD_AUDIT_REPORT_V1.md  MUD_AUDIT_RESOLUTION.md  MUD_COGNITIVE_ARCH.md  MUD_CONVERSION_AUDIT.md  MUD_DATA_ARCHITECTURE.md  MUD_DELEGATION_ROUTER.md  MUD_DIRECTORY_STRUCTURE.md  MUD_EMBED_TERNARIZATION.md  MUD_GUIDELINES.md  MUD_MASTER_MANIFESTO.md  MUD_MATHEMATICAL_AUDIT.md  MUD_MOE_EXPERTS.md  MUD_OPTIMIZATION_ANALYSIS.md  MUD_OPTIMIZATION_LOG.md  MUD_ORCHESTRATION.md  MUD_OVERVIEW.md  MUD_ROADMAP.md  MUD_SESSION_REPORT_2026-05-25.md  MUD_STATISTICAL_AUDIT.md  MUD_SYSTEM_UPGRADE_V1.5.md  MUD_TRAINING_PROTOCOLS.md  MUD_USER_MANUAL.md  MUD_V1_MASTER_REPORT.md  ROADMAP.md  SYSTEM_AUDIT.md
docs/hardware/: AI_KERNEL_PLAN.md  MUD_HARDWARE_ISA.md  MUD_KERNEL_PLAN.md  MUD_MEMORY_CACHE.md  MUD_POINTER_STRATEGY.md  MUD_TERNARY_ISA.md  POINTER_STRATEGY.md  VULKAN_INTEGRATION.md
forge_autograd/: Cargo.toml
forge_autograd/src/: avx_math.rs  lib.rs
models/: knowledge.db-shm  logic_module.ai  test_model.ai
models/tmp_kaggle_v1/: auto_config.py  mud_fast_trainer.py
models/tmp_kaggle_v2/: auto_config.py  mud_fast_trainer.py
scripts/: extract_kaggle_knowledge.sh  train_master.sh
src/: hardware.rs  lib.rs  main.rs  vulkan_backend.rs
src/ai/: auto_trainer.rs  graph.rs  inference.rs  ingester.rs  mod.rs
src/ai/skills/: autoformatter.rs  data_analysis.rs  language.rs  learning.rs  logic_math.rs  memory.rs  mod.rs  personality.rs  plotting.rs  retrieval.rs  translator.rs  web_search.rs
src/asm/: math.s  mod.rs  q4_0_gemv.s  q4_0_gemv_fused.s  rmsnorm.s  rope.s  ternary_gemv.s  ternary_gemv_4rows.s  tests.rs
src/gguf/: dump_metadata.rs  dump_tensors.rs  mod.rs  tests.rs  tokenizer_test.rs
src/model/: inference.rs  mod.rs  tokenizer.rs  tokenizer_test.rs  transformer.rs
src/mud/: auto_trainer.rs  corpus_trainer.rs  graph.rs  inference.rs  ingester.rs  mod.rs  routing.rs  store.rs
src/mud/skills/: autoformatter.rs  code_formatter.rs  coding.rs  data_analysis.rs  language.rs  learning.rs  logic_marks.rs  logic_math.rs  memory.rs  mod.rs  personality.rs  plotting.rs  retrieval.rs  text_styling.rs  translator.rs  web_search.rs
src/vulkan/: mod.rs  vulkan_backend.rs
tests/data/: data.csv  test_doc.txt
tools/: ai_fusion.rs  analyze_output.py  analyze_output2.py  attention_audit.rs  check_checkpoints_validity.py  check_utf8.py  cognitive_dashboard.py  cognitive_integrity.rs  compute_benchmark.py  convert_ckpt_to_mud.py  db_to_training.py  deep_math_audit.rs  deep_statistics.py  dreamer.py  embed_audit.rs  embed_ternarize.rs  expert_anatomy.rs  export_checkpoint.py  fix.py  gen_logic_skill.py  generate_massive_dataset.py  hardware_profiler.py  hw_detect.rs  inspect_mud.py  interactive_validator.rs  iq_box.rs  knowledge_packager.rs  language_audit.rs  math_sandbox.py  memory_benchmark.rs  merge_knowledge_for_kaggle.py  model_banner.rs  model_dumper.rs  moe_audit.rs  mud_autotrainer.rs  mud_calibrator.rs  mud_corpus_trainer.rs  mud_fusion.rs  neural_autopsy.rs  patch_trainers.py  (+15 more)
tools/legacy/: audit.rs  layer_trace.rs  list_tensors.rs  logic_audit.rs  logits_audit.rs  map_audit.rs  model_audit.rs  predict_audit.rs  structural_audit.rs  transformer_audit.rs  weight_audit.rs
tools/universal_converter/: calibration.rs  main.rs  parser.rs  quantizer.rs
training/: KAGGLE_COMMANDS.md  README.md  ai_language_trainer.py  auto_config.py  bench_trainer.py  build_vocab.py  build_vocab_bilingual.py  corpus.py  dataset-metadata.json  deterministic_brain.py  distillation_trainer.py  exporter.py  extra_knowledge.txt  google_colab_trainer.py  kaggle_config.sh.example  kaggle_trainer.py  kernel-metadata.json  local_fix.py  mud_cognitive_trainer.py  mud_fast_trainer.py  mud_final_trainer.py  mud_language_trainer.py  mud_ultra_trainer.py  pull_from_kaggle.sh  push_to_kaggle.sh  sentiment_corpus.py  ternary_moe_logic.py  test_hybrid.py  test_quant.py  vocab_es_en.txt  vulkan_backend.py  vulkan_trainer_benchmark.py
