[package]
name = "forge_llm"
version = "0.1.0"
edition = "2021"
description = "Ultra-optimized Ternary MoE inference engine (MUD architecture)"
default-run = "forge_llm"

[dependencies]
# Memory mapping for loading .mud files efficiently
memmap2 = "0.9.3"
half = { version = "2.3.1", features = ["num-traits"] }

# Vulkan ecosystem for iGPU compute offloading
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"

# Core utilities
log = "0.4.20"
env_logger = "0.10.1"
anyhow = "1.0.75"
rand = "0.10.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
crossterm = "0.29.0"
unicode-width = "0.2.2"
sysinfo = "0.38.4"
serde_json = "1.0.149"
byteorder = "1.5.0"
parking_lot = "0.12.5"
rayon = "1.12.0"
zip = "8.6.0"
pdf-extract = "0.10.0"
roxmltree = "0.21.1"
safetensors = "0.4.3"
ctrlc = "3.4.0"
forge_autograd = { version = "0.1.0", path = "forge_autograd" }
ratatui = "0.26.1"
comfy-table = "7.1.0"

[[bin]]
name = "forge_llm"
path = "src/main.rs"

[[bin]]
name = "model_dumper"
path = "tools/model_dumper.rs"

[[bin]]
name = "tokenizer_audit"
path = "tools/tokenizer_audit.rs"

[[bin]]
name = "expert_anatomy"
path = "tools/expert_anatomy.rs"

[[bin]]
name = "step_inference"
path = "tools/step_inference.rs"

[[bin]]
name = "truth_auditor"
path = "tools/truth_auditor.rs"

[[bin]]
name = "weight_audit"
path = "tools/weight_audit.rs"

[[bin]]
name = "attention_audit"
path = "tools/attention_audit.rs"

[[bin]]
name = "deep_math_audit"
path = "tools/deep_math_audit.rs"

[[bin]]
name = "mud_fusion"
path = "tools/mud_fusion.rs"

[[bin]]
name = "ternary_audit"
path = "tools/ternary_audit.rs"

[[bin]]
name = "language_audit"
path = "tools/language_audit.rs"

[[bin]]
name = "memory_benchmark"
path = "tools/memory_benchmark.rs"

[[bin]]
name = "knowledge_packager"
path = "tools/knowledge_packager.rs"

[[bin]]
name = "ptr_audit"
path = "tools/ptr_audit.rs"

[[bin]]
name = "moe_audit"
path = "tools/moe_audit.rs"

[[bin]]
name = "tensor_microscope"
path = "tools/tensor_microscope.rs"

[[bin]]
name = "mud_calibrator"
path = "tools/mud_calibrator.rs"

[[bin]]
name = "universal_converter"
path = "tools/universal_converter/main.rs"

[[bin]]
name = "interactive_validator"
path = "tools/interactive_validator.rs"

[[bin]]
name = "mud_autotrainer"
path = "tools/mud_autotrainer.rs"

[[bin]]
name = "cognitive_integrity"
path = "tools/cognitive_integrity.rs"

[[bin]]
name = "embed_audit"
path = "tools/embed_audit.rs"

[[bin]]
name = "embed_ternarize"
path = "tools/embed_ternarize.rs"

[lib]
name = "forge_llm"
crate-type = ["cdylib", "lib"]

# GUI/TUI for professional dashboards
ratatui = "0.26.1"
comfy-table = "7.1.0"

[build-dependencies]
# Used to compile ASM files during the build process
cc = "1.0.83"

[[bin]]
name = "iq_box"
path = "tools/iq_box.rs"

[[bin]]
name = "model_banner"
path = "tools/model_banner.rs"

[[bin]]
name = "hw_detect"
path = "tools/hw_detect.rs"

[[bin]]
name = "recalibration_projector"
path = "tools/recalibration_projector.rs"

[[bin]]
name = "mud_corpus_trainer"
path = "tools/mud_corpus_trainer.rs"

[[bin]]
name = "vocab_check"
path = "tools/vocab_check.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# Target CPU features should be specified during compilation (e.g. RUSTFLAGS="-C target-cpu=native")

